--- a/package.json
+++ b/package.json
@@ -7,24 +7,32 @@
   "homepage": "https://github.com/cvgellhorn/webpack-boilerplate",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress --config webpack.config.dev.js",
-    "build": "webpack -p --progress --config webpack.config.build.js"
+    "build": "webpack -p --progress --config webpack.config.build.js",
+    "test": "mocha --require babel-polyfill --require babel-register"
   },
   "repository": {
     "type": "git",
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "rxjs": "^5.5.6"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "ejs-loader": "^0.3.0",
+    "expect": "^1.20.2",
     "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
+    "mocha": "^5.0.1",
     "node-sass": "^4.7.2",
+    "rxjs-marbles": "^2.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "url-loader": "^0.6.2",
